// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders empty form without data 1`] = `
Array [
  <FormError
    errors={Map {}}
  />,
  <form
    className="root"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="firstname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="firstname"
        >
          First Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="firstname"
              onBlur={[Function]}
              onChange={[Function]}
              value="Huy"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="lastname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="lastname"
        >
          Last Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="lastname"
              onBlur={[Function]}
              onChange={[Function]}
              value="Kon"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="email"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="email"
        >
          Email
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              value="huykon@gmail.com"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="passwordLabel"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="password"
        >
          Password
        </label>
        <span>
          **********
        </span>
      </div>
    </div>
    <div
      className="changePasswordButtonContainer"
    >
      <button
        className="root_normalPriority"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="content"
        >
          Change Password
        </span>
      </button>
    </div>
    <div
      className="buttons"
    >
      <button
        className="root_lowPriority"
        disabled={false}
        onClick={[MockFunction onCancelModal]}
        type="button"
      >
        <span
          className="content"
        >
          Cancel
        </span>
      </button>
      <button
        className="root_highPriority"
        disabled={false}
        type="submit"
      >
        <span
          className="content"
        >
          Save
        </span>
      </button>
    </div>
  </form>,
]
`;

exports[`renders form error 1`] = `
Array [
  <FormError
    errors={
      Map {
        "error" => [Error: Form Error],
      }
    }
  />,
  <form
    className="root"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="firstname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="firstname"
        >
          First Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="firstname"
              onBlur={[Function]}
              onChange={[Function]}
              value="Huy"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="lastname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="lastname"
        >
          Last Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="lastname"
              onBlur={[Function]}
              onChange={[Function]}
              value="Kon"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="email"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="email"
        >
          Email
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              value="huykon@gmail.com"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="passwordLabel"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="password"
        >
          Password
        </label>
        <span>
          **********
        </span>
      </div>
    </div>
    <div
      className="changePasswordButtonContainer"
    >
      <button
        className="root_normalPriority"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="content"
        >
          Change Password
        </span>
      </button>
    </div>
    <div
      className="buttons"
    >
      <button
        className="root_lowPriority"
        disabled={false}
        onClick={[MockFunction onCancelModal]}
        type="button"
      >
        <span
          className="content"
        >
          Cancel
        </span>
      </button>
      <button
        className="root_highPriority"
        disabled={false}
        type="submit"
      >
        <span
          className="content"
        >
          Save
        </span>
      </button>
    </div>
  </form>,
]
`;

exports[`renders prefilled form with data with disabled buttons 1`] = `
Array [
  <FormError
    errors={Map {}}
  />,
  <form
    className="root"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="firstname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="firstname"
        >
          First Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="firstname"
              onBlur={[Function]}
              onChange={[Function]}
              value="Philip"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="lastname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="lastname"
        >
          Last Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="lastname"
              onBlur={[Function]}
              onChange={[Function]}
              value="Fry"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="email"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="email"
        >
          Email
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              value="fry@planet.express"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="passwordLabel"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="password"
        >
          Password
        </label>
        <span>
          **********
        </span>
      </div>
    </div>
    <div
      className="changePasswordButtonContainer"
    >
      <button
        className="root_normalPriority"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="content"
        >
          Change Password
        </span>
      </button>
    </div>
    <div
      className="buttons"
    >
      <button
        className="root_lowPriority"
        disabled={true}
        onClick={[MockFunction onCancelModal]}
        type="button"
      >
        <span
          className="content"
        >
          Cancel
        </span>
      </button>
      <button
        className="root_highPriority"
        disabled={true}
        type="submit"
      >
        <span
          className="content"
        >
          Saving
        </span>
      </button>
    </div>
  </form>,
]
`;

exports[`renders prefilled form with data with enabled change password form 1`] = `
Array [
  <FormError
    errors={Map {}}
  />,
  <form
    className="root"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="firstname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="firstname"
        >
          First Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="firstname"
              onBlur={[Function]}
              onChange={[Function]}
              value="Philip"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="lastname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="lastname"
        >
          Last Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="lastname"
              onBlur={[Function]}
              onChange={[Function]}
              value="Fry"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="email"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="email"
        >
          Email
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              value="fry@planet.express"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="password"
    >
      <div
        className="root"
      >
        <label
          className="label"
        >
          Current Password
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 1,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              autoComplete="current-password"
              className="input"
              name="password"
              onBlur={[Function]}
              onChange={[Function]}
              type="password"
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          >
            <button
              className="passwordButton"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span
                className="content"
              >
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
                  />
                  <line
                    x1="1"
                    x2="23"
                    y1="1"
                    y2="23"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
        <p
          className="root"
        />
      </div>
      <button
        className="root_normalPriority"
        disabled={false}
        type="button"
      >
        <span
          className="content"
        >
          Forgot Password?
        </span>
      </button>
    </div>
    <div
      className="newPassword"
    >
      <div
        className="root"
      >
        <label
          className="label"
        >
          New Password
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 1,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              name="newPassword"
              onBlur={[Function]}
              onChange={[Function]}
              type="password"
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          >
            <button
              className="passwordButton"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span
                className="content"
              >
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
                  />
                  <line
                    x1="1"
                    x2="23"
                    y1="1"
                    y2="23"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="buttons"
    >
      <button
        className="root_lowPriority"
        disabled={false}
        onClick={[MockFunction onCancelModal]}
        type="button"
      >
        <span
          className="content"
        >
          Cancel
        </span>
      </button>
      <button
        className="root_highPriority"
        disabled={false}
        type="submit"
      >
        <span
          className="content"
        >
          Save
        </span>
      </button>
    </div>
  </form>,
]
`;
